--- a/app/mail/templates/mail/send_email_form.html
+++ b/app/mail/templates/mail/send_email_form.html
@@ -23,6 +23,7 @@
     </style>
   </head>
   <body>
+    <button onclick="window.history.back()" class="btn btn-outline-primary">Voltar</button>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
